arreglo errores y creo la carpeta para los gifs

--- a/src/components/itemlistcontainer/Itemlistcontainer.css
+++ b/src/components/itemlistcontainer/Itemlistcontainer.css
@@ -1,5 +1,6 @@
 #prod{
     background-image: linear-gradient(to bottom, #3f6d4e, #4a8754, #5aa057, #70ba55, #8bd450);
+    font-family:Helvetica;
 }
 
 .prodCard{
@@ -9,7 +10,7 @@
     display: inline-block;
     color: #8BD450;
 }
-.preecio{
+.precio{
     margin-top: 0.5rem;
 }
 .texto{
