--- a/src/components/cartwidget/Carwidget.css
+++ b/src/components/cartwidget/Carwidget.css
@@ -1,10 +1,12 @@
 .carrito{
-    margin-top: -1rem;
+    margin-top: -0.7rem;
     display: flex;
     justify-content: space-around;
     height: 50px;
     width: 70px;
     background-color: #1D1A2F;
+    border-radius: 50px;
+    padding: 5px;
 }
 
 .carroImg{
