agrego boton de eliminar producto por id

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,14 @@
+.shopCart{
+    display: inline-block;
+    width: 100%;
+}
+
 .itemCart{
-    width: 50%;
+    width: 40%;
     border: solid 1px purple;
     margin: 5px;
+}
+
+.cart{
+    width: 50%;
 }
